Update CreateComponentXML.java